zag-poc/tests/diag/e0003_raises.expected
error[E0003]: `try` used in function `no_error_type` which does not return !T
  --> tests/diag/e0003_raises.zag:8:1
   |
8 | fn no_error_type() i32 {
   | ^^^^^^^^^^^^^ effect occurs here
   = note: `try` propagates errors to the caller, but this function's return type is not !T
   = hint: change the return type to !T or handle the error with `catch`
