zag-poc/tests/diag/e0003_raises.zag
// E0003: try used in a function that does not return !T
error MyErr { bad }

fn might_fail() !i32 {
    return error.bad;
}

fn no_error_type() i32 {
    return try might_fail();
}
